--- a/.github/workflows/test_frontend.yml
+++ b/.github/workflows/test_frontend.yml
@@ -10,7 +10,7 @@ defaults:
     working-directory: packages/frontend
 
 jobs:
-  Lint:
+  Lint-Frontend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
