Update runs conditions

--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -2,10 +2,16 @@ name: Test(Backend)
 
 on:
   push:
+    branches:
+      - main
   pull_request:
     types:
       - opened
       - reopened
+      - synchronize
+      - ready_for_review
+    branches:
+      - main
 
 jobs:
   Test-Backend:
