--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -39,6 +39,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"happy-dom": "^8.1.3",
 		"jest-extended": "^3.2.3",
+		"react-hook-form": "^7.41.5",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.4",
 		"vite-tsconfig-paths": "^4.0.3",
