--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
 		"@mui/material": "^5.11.4",
+		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.6.2"
@@ -25,6 +26,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/react-hooks": "^8.0.1",
 		"@testing-library/user-event": "^14.4.3",
+		"@types/lodash": "^4.14.191",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
 		"@types/testing-library__user-event": "^4.2.0",
