--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
+		"@mui/icons-material": "^5.11.0",
 		"@mui/material": "^5.11.4",
 		"lodash": "^4.17.21",
 		"react": "^18.2.0",
