--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.2",
     "happy-dom": "^8.1.4",
     "jest-extended": "^3.2.3",
     "msw": "^0.49.2",
