--- a/packages/backend/docker-compose.yml
+++ b/packages/backend/docker-compose.yml
@@ -24,6 +24,7 @@ services:
             - sail
         depends_on:
             - mysql
+            - redis
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -44,6 +45,19 @@ services:
             test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
             retries: 3
             timeout: 5s
+    redis:
+        image: redis:7.0.5-alpine
+        ports:
+            - '${FORWARD_REDIS_PORT:-6379}:6379'
+        volumes:
+            - 'sail-redis:/data'
+        networks:
+            - sail
+        healthcheck:
+            test: [ "CMD", "redis-cli", "ping" ]
+            retries: 3
+            timeout: 5s
+
 networks:
     sail:
         driver: bridge
@@ -52,5 +66,5 @@ volumes:
         driver: local
     sail-redis:
         driver: local
-    sail-meilisearch:
-        driver: local
+    # sail-meilisearch:
+    #     driver: local
