--- a/packages/backend/composer.json
+++ b/packages/backend/composer.json
@@ -9,7 +9,8 @@
         "guzzlehttp/guzzle": "^7.5.0",
         "laravel/framework": "^9.47.0",
         "laravel/sanctum": "^3.2.0",
-        "laravel/tinker": "^2.8.0"
+        "laravel/tinker": "^2.8.0",
+        "predis/predis": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.21.0",
