--- a/packages/backend/composer.json
+++ b/packages/backend/composer.json
@@ -13,6 +13,7 @@
         "predis/predis": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.21.0",
         "laravel/pint": "^1.4.0",
         "laravel/sail": "^1.18.0",
