--- a/packages/backend/composer.json
+++ b/packages/backend/composer.json
@@ -5,12 +5,13 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.2.1",
+        "php": "^8.2.0",
         "guzzlehttp/guzzle": "^7.5.0",
         "laravel/framework": "^9.47.0",
         "laravel/sanctum": "^3.2.0",
         "laravel/tinker": "^2.8.0",
-        "predis/predis": "^2.1.0"
+        "predis/predis": "^2.1.0",
+        "ramsey/uuid": "^4.7"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12.3",
