--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,22 @@
 {
-	"cSpell.words": ["mswjs", "Phantomic", "tanstack"]
+	"cSpell.words": [
+		"autoload",
+		"autoloader",
+		"barryvdh",
+		"dont",
+		"fakerphp",
+		"guzzlehttp",
+		"larastan",
+		"laravelsail",
+		"mswjs",
+		"nunomaduro",
+		"pestphp",
+		"Phantomic",
+		"phpstan",
+		"phpunit",
+		"predis",
+		"reqs",
+		"spatie",
+		"tanstack"
+	]
 }
