--- a/packages/backend/composer.json
+++ b/packages/backend/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.2.0",
         "laravel/tinker": "^2.8.0",
         "predis/predis": "^2.1.0",
-        "ramsey/uuid": "^4.7"
+        "ramsey/uuid": "^4.7",
+        "vyuldashev/laravel-openapi": "^1.8"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12.3",
