--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
+		"@hookform/resolvers": "^2.9.10",
 		"@mui/icons-material": "^5.11.0",
 		"@mui/material": "^5.11.5",
 		"@tanstack/react-query": "^4.22.0",
@@ -25,7 +26,9 @@
 		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.6.2"
+		"react-router-dom": "^6.6.2",
+		"yup": "^0.32.11",
+		"zod": "^3.20.2"
 	},
 	"devDependencies": {
 		"@mswjs/data": "^0.11.0",
