--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -26,6 +26,7 @@
 		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-infinite-scroller": "^1.2.6",
 		"react-router-dom": "^6.6.2",
 		"yup": "^0.32.11",
 		"zod": "^3.20.2"
