--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -40,6 +40,7 @@
 		"@types/lodash": "^4.14.191",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
+		"@types/react-infinite-scroller": "^1.2.3",
 		"@types/testing-library__user-event": "^4.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.48.2",
 		"@typescript-eslint/parser": "^5.48.2",
