--- a/packages/backend/docker-compose.yml
+++ b/packages/backend/docker-compose.yml
@@ -11,7 +11,8 @@ services:
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
-            - '${APP_PORT:-80}:80'
+            # - '${APP_PORT:-80}:80'
+            - '10080:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         environment:
             WWWUSER: '${WWWUSER}'
