--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -19,10 +19,36 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Generate github token
+        id: generate_token
+        uses: ./.github/actions/github-app-token
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
       - name: Setup CI
         run: make setup-ci
       - name: Test
         run: make backend-test
+      - name: Sed Coverage Report
+        if: github.event_name == 'pull_request'
+        run: |
+          sed -E "s/"$'\E'"\[([0-9]{1,2}(;[0-9]{1,2})*)?m//g" | \
+          grep "Code Coverage Report:" -A6 ./packages/backend/coverage.log | sed -e "s/^ *//" | sed -e "s/ *$//" | sed -e "/^ *$/d" > ./packages/backend/coverage-summary.log
+      - name: Read coverage summary
+        if: github.event_name == 'pull_request'
+        id: coverage-summary
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./packages/backend/coverage-summary.log
+      - name: Comment Coverage Summary
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: github.event_name == 'pull_request'
+        with:
+          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
+          header: coverage-summary
+          message: |
+            ## Coverage Summary
+            ${{ steps.coverage-summary.outputs.content }}
   Lint-Backend:
     runs-on: ubuntu-latest
     steps:
