--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -29,6 +29,13 @@ jobs:
         run: make setup-ci
       - name: Test
         run: make backend-test
+      - name: Delete Duplicate Comment with Coverage Summary
+        if: github.event_name == 'pull_request'
+        uses: kamatama41/hide-pr-comments-action@v0
+        with:
+          github-token: ${{ steps.generate_token.outputs.token }}
+          author: 2na2
+          message_regex: "Coverage after merging"
       - name: Shaping
         if: github.event_name == 'pull_request'
         run: sed -i -e 's/\/var\/www\/html/packages\/backend/g' ./packages/backend/clover.xml
