--- a/packages/backend/composer.json
+++ b/packages/backend/composer.json
@@ -24,6 +24,7 @@
         "mockery/mockery": "^1.5.1",
         "nunomaduro/collision": "^6.4.0",
         "nunomaduro/larastan": "^2.4.0",
+        "nunomaduro/phpinsights": "^2.6",
         "phpstan/phpstan": "^1.9.14",
         "phpunit/phpunit": "^9.5.28",
         "spatie/laravel-ignition": "^1.6.4"
@@ -65,7 +66,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "minimum-stability": "dev",
