--- a/.github/workflows/cloudflare-pages.yml
+++ b/.github/workflows/cloudflare-pages.yml
@@ -13,9 +13,12 @@ on:
     branches:
       - main
 
+env:
+  BASE_URL: https://sns-app.na2na.dev
+
 jobs:
-  publish:
-    runs-on: ubuntu-20.04
+  Publish:
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       deployments: write
@@ -35,3 +38,14 @@ jobs:
           projectName: ${{ env.REPOSITORY_NAME }}
           directory: ./packages/frontend/dist
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+  CachePurge:
+    runs-on: ubuntu-latest
+    needs: Publish
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Purge cache
+        uses: jakejarvis/cloudflare-purge-action@master
+        env:
+          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
+          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          PURGE_URLS: '["${{ env.BASE_URL }}", "${{ env.BASE_URL }}/"]'
