--- a/.github/workflows/infra-plan.yml
+++ b/.github/workflows/infra-plan.yml
@@ -2,7 +2,16 @@ name: terraform plan
 
 on:
   push:
+    branches:
+      - main
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+    branches:
+      - main
 
 jobs:
   EC2-Plan:
