--- a/.github/workflows/infra-plan.yml
+++ b/.github/workflows/infra-plan.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           cd packages/infra/ec2 &&
           cp terraform.tfvars.example terraform.tfvars
+          touch setup.sh
       - name: setup terraform
         uses: hashicorp/setup-terraform@v2
         with:
