--- a/packages/infra/ec2/terraform.tfvars.example
+++ b/packages/infra/ec2/terraform.tfvars.example
@@ -1,3 +1,3 @@
 availability_zone = "ap-northeast-1a"
-instance_tag_name = "backend-ci"
-iam_instance_profile_name = "na2na-ci_ssm"
+instance_tag_name = "na2na-sns-app-backend"
+iam_instance_profile_name = "sns-app-backend_for_ssm"
