--- a/.github/workflows/infra-plan.yml
+++ b/.github/workflows/infra-plan.yml
@@ -35,7 +35,8 @@ jobs:
         run: |
           cd packages/infra/ec2 &&
           cp terraform.tfvars.example terraform.tfvars
-          touch setup.sh
+          cp setup_base.sh setup.sh
+          echo "${{ secrets.CF_TUNNEL_INSTALL }}" > .credencials/cf_tunnel.sh
       - name: setup terraform
         uses: hashicorp/setup-terraform@v2
         with:
@@ -52,4 +53,4 @@ jobs:
       - name: terraform plan
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
-        run: cd packages/infra/ec2 && tfcmt plan -patch -- terraform plan -no-color -input=false
+        run: tfcmt plan -patch -- make backend-infra-plan-ci
