--- a/.github/workflows/infra-plan.yml
+++ b/.github/workflows/infra-plan.yml
@@ -37,7 +37,8 @@ jobs:
           cd packages/infra/ec2 &&
           cp terraform.tfvars.example terraform.tfvars
           cp setup_base.sh setup.sh
-          echo "${{ secrets.CF_TUNNEL_INSTALL }}" > .credencials/cf_tunnel.sh
+          echo "${{ secrets.CF_TUNNEL_INSTALL }}" > .credentials/cf_tunnel.sh
+          echo "" >> .credentials/cf_tunnel.sh
       - name: setup terraform
         uses: hashicorp/setup-terraform@v2
         with:
