--- a/packages/intern-silde/package.json
+++ b/packages/intern-silde/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"scripts": {
 		"build": "slidev build",
-		"dev": "slidev --open"
+		"dev": "slidev"
 	},
 	"dependencies": {
 		"@slidev/cli": "^0.38.4",
