--- a/packages/intern-slide/package.json
+++ b/packages/intern-slide/package.json
@@ -10,5 +10,8 @@
 		"@slidev/theme-apple-basic": "^0.20.0",
 		"@slidev/theme-default": "*",
 		"@slidev/theme-seriph": "*"
+	},
+	"devDependencies": {
+		"playwright-chromium": "^1.29.2"
 	}
 }
