サーバサイドインターン/発表資料 (#127)
* Add dependencies

* Update dev command

* Remove unused

* Add Theme

* Add 環境周りまで

* Update Backend記事まで

* フロントエンド構築まで

* 一旦最後まで

* Add Slide deploy

* Update Actions Name

* Fix typo

* Add dependencies

* Update .gitattributes

* Update slides.md

* Add exported pdf

* Add command

* Add comment追記

* Update
- 表紙追記
- 目次を見やすく

* バージョン情報追記

* Update
- OpenAPIスキーマ生成ライブラリに言及
- 本番カンペ追記

* Add page number

* Update
要件定義について追加

* Add demo image

* Update exported pdf

* Fix 日付

* Update comments

* Update pdf

--- a/.github/workflows/cloudflare-pages-slide.yml
+++ b/.github/workflows/cloudflare-pages-slide.yml
@@ -1,4 +1,4 @@
-name: Cloudflare Pages Frontend Deploy
+name: Cloudflare Pages Slide Deploy
 
 on:
   push:
@@ -14,7 +14,7 @@ on:
       - main
 
 env:
-  BASE_URL: https://sns-app.na2na.dev
+  BASE_URL: https://na2na-sns-app-slide.na2na.dev
 
 jobs:
   Publish:
@@ -25,11 +25,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - run: echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
       - name: build
         run: |
-          make frontend-setup && \
-          make frontend-build
+          make slide-build
       - name: Generate github token
         id: generate_token
         uses: ./.github/actions/github-app-token
@@ -41,8 +39,8 @@ jobs:
         with:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          projectName: ${{ env.REPOSITORY_NAME }}
-          directory: ./packages/frontend/dist
+          projectName: na2na-sns-app-slide
+          directory: ./packages/intern-slide/dist
           gitHubToken: ${{ steps.generate_token.outputs.token }}
   CachePurge:
     runs-on: ubuntu-latest
