--- a/.github/workflows/cloudflare-pages-slide.yml
+++ b/.github/workflows/cloudflare-pages-slide.yml
@@ -1,17 +1,18 @@
 name: Cloudflare Pages Slide Deploy
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - ready_for_review
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
+#  pull_request:
+#    types:
+#      - opened
+#      - reopened
+#      - synchronize
+#      - ready_for_review
+#    branches:
+#      - main
+  workflow_dispatch:
 
 env:
   BASE_URL: https://na2na-sns-app-slide.na2na.dev
