--- a/.github/workflows/infra-plan.yml
+++ b/.github/workflows/infra-plan.yml
@@ -1,17 +1,18 @@
 name: Terraform Plan
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - ready_for_review
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
+#  pull_request:
+#    types:
+#      - opened
+#      - reopened
+#      - synchronize
+#      - ready_for_review
+#    branches:
+#      - main
+  :workflow_dispatch:
 
 jobs:
   EC2-Plan:
