--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -1,10 +1,10 @@
 name: Backend CD
 
 on:
-  pull_request:
-    branches:
-      - main
-    types: [closed]
+#  pull_request:
+#    branches:
+#      - main
+#    types: [closed]
   workflow_dispatch:
 
 jobs:
