--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -25,6 +25,10 @@ jobs:
         with:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.PRIVATE_KEY }}
+
+      - uses: satackey/action-docker-layer-caching@v0.0.11
+        continue-on-error: true
+
       - name: Setup CI
         run: make setup-ci
       - name: Test
