--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -27,6 +27,11 @@ jobs:
           private_key: ${{ secrets.PRIVATE_KEY }}
       - uses: satackey/action-docker-layer-caching@v0.0.11
         continue-on-error: true
+        # TODO: Enable cache key
+        # with:
+        #   key: foo-docker-cache-{hash}
+        #   restore-keys: |
+        #     foo-docker-cache-
       - name: Setup CI
         run: make setup-ci
       - name: Test
@@ -54,6 +59,11 @@ jobs:
         uses: actions/checkout@v3
       - uses: satackey/action-docker-layer-caching@v0.0.11
         continue-on-error: true
+        # TODO: Enable cache key
+        # with:
+        #   key: foo-docker-cache-{hash}
+        #   restore-keys: |
+        #     foo-docker-cache-
       - name: Setup CI
         run: make setup-ci
       - name: Lint
