発火条件の変更

--- a/.github/workflows/image-scan.yml
+++ b/.github/workflows/image-scan.yml
@@ -2,8 +2,16 @@ name: Image Scan
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+    branches:
+      - main
+
 jobs:
   build:
     name: Build
