--- a/.github/workflows/image-scan.yml
+++ b/.github/workflows/image-scan.yml
@@ -40,12 +40,12 @@ jobs:
           ignore-unfixed: true
           vuln-type: "os,library"
           severity: "CRITICAL,HIGH"
-      - name: Utils Container Scan
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: "sns-app-utils:latest"
-          format: "table"
-          exit-code: "1"
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
+      # - name: Utils Container Scan
+      #   uses: aquasecurity/trivy-action@master
+      #   with:
+      #     image-ref: "sns-app-utils:latest"
+      #     format: "table"
+      #     exit-code: "1"
+      #     ignore-unfixed: true
+      #     vuln-type: "os,library"
+      #     severity: "CRITICAL,HIGH"
